# inifix-pre-commit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.github/workwflows/: ci.yml
src/inifix_pre_commit/: __init__.py
