[build-system]
requires = ["flit-core==3.12"]
build-backend = "flit_core.buildapi"

[project]
name = "inifix-pre-commit"
version = "1.0.0"
description = "Pre-commit hooks backed by inifix (non-functional)"
readme = "README.md"
authors = [
    { name = "C.M.T Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"

# reproduce the entire dependency tree from inifix-cli, with exact versions pinned
dependencies = [
    "inifix-cli==1.0.0",
    "click==8.3.3",
    "inifix==6.1.2",
    "typing-extensions==4.15.0", # TODO: drop this
]

[project.urls]
Homepage = "https://github.com/la-niche/inifix-pre-commit"

[tool.uv.sources]
inifix-cli = { git = "https://github.com/neutrinoceros/inifix.git" }
