[build-system]
requires = ["flit-core==3.12"]
build-backend = "flit_core.buildapi"

[project]
name = "inifix-pre-commit"
version = "1.0.0"
description = "Pre-commit hooks backed by inifix (non-functional)"
readme = "README.md"
authors = [
    { name = "C.M.T Robert" },
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
]
requires-python = ">=3.11"

# reproduce the entire dependency tree from inifix-cli, with exact versions pinned
dependencies = [
    "inifix-cli==1.0.0",
    "click==8.3.3",
    "inifix==7.0.0",
    # via click
    # should be removed when click is upgraded to 8.5 or newer
    # https://github.com/pallets/click/pull/3505
    "colorama==0.4.6 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/la-niche/inifix-pre-commit"
